unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/Process_Automation_Control_Panel__mdt.object-meta.xml
<CustomObject>
    <description>Used for trigger ON/OFF framework</description>
    <label>Process Automation Control Panel</label>
    <pluralLabel>Process Automation Control Panels</pluralLabel>
</CustomObject>