unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Account_Request_Trigger_Update__c.field-meta.xml
<CustomField>
    <fullName>Account_Request_Trigger_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off UPDATE logic in AccountRequestTrigger.</description>
    <inlineHelpText>Use to turn on/off UPDATE logic in AccountRequestTrigger.</inlineHelpText>
    <label>Account Request Trigger Update</label>
    <type>Checkbox</type>
</CustomField>