unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Account_Trigger_Entry_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Entry_2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off UPDATE logic in AccountTrigger.</description>
    <inlineHelpText>Use to turn on/off UPDATE logic in AccountTrigger.</inlineHelpText>
    <label>Account Trigger Entry 2</label>
    <type>Checkbox</type>
</CustomField>