unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Account_Trigger_Entry_3__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Entry_3__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off DELETE logic in AccountTrigger.</description>
    <inlineHelpText>Use to turn on/off DELETE logic in AccountTrigger.</inlineHelpText>
    <label>Account Trigger Entry 3</label>
    <type>Checkbox</type>
</CustomField>