unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Application_Log_Event_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Application_Log_Event_Trigger_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to switch ON/OFF the Application Log platform event trigger</description>
    <label>Application Log Event Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>