unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Contact_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Contact_Trigger_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off INSERT logic in ContactTrigger.</description>
    <inlineHelpText>Use to turn on/off INSERT logic in ContactTrigger.</inlineHelpText>
    <label>Contact Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>