unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Contract_Line_Item_Trigger_Update__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_Trigger_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Line Item Trigger Update</label>
    <type>Checkbox</type>
</CustomField>