unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Customer_Family_Tree_Discount_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Family_Tree_Discount_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Family Tree Discount Update</label>
    <type>Checkbox</type>
</CustomField>