unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Customer_Price_List_Trigger_Delete__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_List_Trigger_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off DELETE logic in CustomerPriceListTrigger.</description>
    <inlineHelpText>Use to turn on/off DELETE logic in CustomerPriceListTrigger.</inlineHelpText>
    <label>Customer Price List Trigger Delete</label>
    <type>Checkbox</type>
</CustomField>