unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Opportunity_Trigger_Entry_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Trigger_Entry_1__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off INSERT logic in OpportunityTrigger.</description>
    <inlineHelpText>Use to turn on/off INSERT logic in OpportunityTrigger.</inlineHelpText>
    <label>Opportunity Trigger Entry 1</label>
    <type>Checkbox</type>
</CustomField>