unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Opportunity_Trigger_Entry_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Trigger_Entry_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to turn on/off UPDATE logic in OpportunityTrigger.</description>
    <inlineHelpText>Use to turn on/off UPDATE logic in OpportunityTrigger.</inlineHelpText>
    <label>Opportunity Trigger Entry 2</label>
    <type>Checkbox</type>
</CustomField>