unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Order_Trigger_Update__c.field-meta.xml
<CustomField>
    <fullName>Order_Trigger_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Trigger Update</label>
    <type>Checkbox</type>
</CustomField>