unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Price_List_Trigger_Delete__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Trigger_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price List Trigger Delete</label>
    <type>Checkbox</type>
</CustomField>