unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Quote_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trigger_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>