unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Spend_Band_Review_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_Review_Trigger_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off INSERT logic in SpendBandReviewTrigger.</description>
    <inlineHelpText>Use to turn on/off INSERT logic in SpendBandReviewTrigger.</inlineHelpText>
    <label>Spend Band Review Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>