unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Task_Trigger_Entry_1__c.field-meta.xml
<CustomField>
    <fullName>Task_Trigger_Entry_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Trigger Entry 1</label>
    <type>Checkbox</type>
</CustomField>