unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Task_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Task_Trigger_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off INSERT logic in TaskTrigger</description>
    <inlineHelpText>Use to turn on/off INSERT logic in TaskTrigger</inlineHelpText>
    <label>Task Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>