unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Task_Trigger_Update__c.field-meta.xml
<CustomField>
    <fullName>Task_Trigger_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off UPDATE logic in TaskTrigger.</description>
    <inlineHelpText>Use to turn on/off UPDATE logic in TaskTrigger.</inlineHelpText>
    <label>Task Trigger Update</label>
    <type>Checkbox</type>
</CustomField>