unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Umbrella_Beneficiary_Trigger_Delete__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Beneficiary_Trigger_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off DELETE logic in UmbrellaBeneficiaryTrigger.</description>
    <inlineHelpText>Use to turn on/off DELETE logic in UmbrellaBeneficiaryTrigger.</inlineHelpText>
    <label>Umbrella Beneficiary Trigger Delete</label>
    <type>Checkbox</type>
</CustomField>