unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Umbrella_Beneficiary_Trigger_Insert__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Beneficiary_Trigger_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off INSERT logic in UmbrellaBeneficiaryTrigger.</description>
    <inlineHelpText>Use to turn on/off INSERT logic in UmbrellaBeneficiaryTrigger.</inlineHelpText>
    <label>Umbrella Beneficiary Trigger Insert</label>
    <type>Checkbox</type>
</CustomField>