unpackaged/main/default/objects/Process_Automation_Control_Panel__mdt/fields/Umbrella_Beneficiary_Trigger_Update__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Beneficiary_Trigger_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to turn on/off UPDATE logic in UmbrellaBeneficiaryTrigger.</description>
    <inlineHelpText>Use to turn on/off UPDATE logic in UmbrellaBeneficiaryTrigger.</inlineHelpText>
    <label>Umbrella Beneficiary Trigger Update</label>
    <type>Checkbox</type>
</CustomField>